# quant-mcp-bench

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: smoke.yaml  u1-smoke.yaml
configs/llama3.2-1b-u1-constrained-sweep/: Q4_K_M.yaml  Q5_K_M.yaml  Q8_0.yaml  fp16.yaml
configs/llama3.2-1b-u1-sweep/: Q4_K_M.yaml  Q5_K_M.yaml  Q8_0.yaml  fp16.yaml
configs/llama3.2-1b-u2-sweep/: Q4_K_M.yaml  Q5_K_M.yaml  Q8_0.yaml  fp16.yaml
configs/llama3.2-1b-u3-sweep/: Q4_K_M.yaml  Q5_K_M.yaml  Q8_0.yaml  fp16.yaml
configs/llama3.2-1b-u4-sweep/: Q4_K_M.yaml  Q5_K_M.yaml  Q8_0.yaml  fp16.yaml
configs/qwen3-0.6b-u1-sweep/: Q4_K_M.yaml  Q5_K_M.yaml  Q8_0.yaml  fp16.yaml
configs/qwen3-0.6b-u2-sweep/: Q4_K_M.yaml  Q5_K_M.yaml  Q8_0.yaml  fp16.yaml
configs/qwen3-0.6b-u3-sweep/: Q4_K_M.yaml  Q5_K_M.yaml  Q8_0.yaml  fp16.yaml
configs/qwen3-0.6b-u4-sweep/: Q4_K_M.yaml  Q5_K_M.yaml  Q8_0.yaml  fp16.yaml
configs/qwen3-1.7b-u1-sweep/: Q4_K_M.yaml  Q5_K_M.yaml  Q8_0.yaml
configs/qwen3-1.7b-u2-sweep/: Q4_K_M.yaml  Q5_K_M.yaml  Q8_0.yaml
configs/qwen3-1.7b-u3-sweep/: Q4_K_M.yaml  Q5_K_M.yaml  Q8_0.yaml
configs/qwen3-1.7b-u4-sweep/: Q4_K_M.yaml  Q5_K_M.yaml  Q8_0.yaml
docs/: PUBLISH_HF.md  RUN_REAL.md  bfcl_reference_svr.json  cbc_3family_phase7.json  live_schemas_phase7.json  sci_regression_phase7.json
tests/: conftest.py  test_bootstrap_ci.py  test_checkers.py  test_cli.py  test_config.py  test_correlation.py  test_cross_bench.py  test_deltas.py  test_execution_sandbox.py  test_gbnf.py  test_hardware.py  test_mcp_leaderboard.py  test_metrics_core.py  test_mock_backend.py  test_pareto.py  test_parsers.py  test_repeats.py  test_schema_complexity.py  test_schema_dump.py  test_schema_validator.py  test_sci_regression.py  test_servers_filesystem.py  test_servers_git.py  test_servers_memory.py  test_servers_sqlite.py  test_servers_toy.py  test_smoke_e2e.py  test_tasks_loader.py
(+246 files in other folders)
