[project]
name = "quantmcp"
version = "0.1.0"
description = "Does quantization survive real MCP tool schemas? A reproducible benchmark."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
    "jsonschema>=4.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "mcp>=1.27,<2",
]

[project.scripts]
quantmcp = "quantmcp.cli:main"

[project.optional-dependencies]
transformers = [
    "transformers>=4.40",
    "torch>=2.0",
    "datasets>=2.0",
    "bitsandbytes>=0.43; sys_platform == 'linux'",
]
llama-cpp = [
    "llama-cpp-python>=0.2",
    "nvidia-cuda-runtime-cu12; sys_platform == 'linux'",
    "nvidia-cublas-cu12; sys_platform == 'linux'",
]
vllm = [
    "vllm>=0.4",
]
decoding = [
    "outlines>=0.0.46",
    "xgrammar>=0.1",
]
space = [
    "gradio>=4.0",
    "plotly>=5.0",
]
all-backends = [
    "transformers>=4.40",
    "torch>=2.0",
    "datasets>=2.0",
    "llama-cpp-python>=0.2",
    "vllm>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantmcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pyright>=1.1",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src", "tests"]
ignore = [
    "src/quantmcp/backends/hf.py",
    "src/quantmcp/backends/llama_cpp.py",
    "src/quantmcp/backends/vllm_backend.py",
]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
asyncio_mode = "auto"
markers = [
    "integration: requires optional deps, network access, or Node/npx MCP reference servers",
    "slow: long-running tests",
    "gpu: requires a real GPU and a downloaded model",
]
